--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,15 @@
 version: '3.8' 
 services: # apps containers you want to build and run
-  ashuapp1: # name of appliction for compose 
-    image: ashudotnetimg:v1  # image i want to build 
+  anujapp1: # name of appliction for compose 
+    image: anujdotnetimg:v1  # image i want to build 
     build: .  # path of dockerfile location -- . means current 
-    container_name: ashuc1 # it will create container also 
-  ashuapp2: 
-    image: ashuhttpd:v1 
+    container_name: anujc1 # it will create container also 
+  anujapp2: 
+    image: anujhttpd:v1 
     build: 
       context: . #location of dockerfile 
       dockerfile: httpd.dockerfile # name of dockerfile 
     container_name: ashuc2 
     ports:
-      - 1234:80  
+      - 1234:5999  
   
