--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services: # apps containers you want to build and run
     build: 
       context: . #location of dockerfile 
       dockerfile: httpd.dockerfile # name of dockerfile 
-    container_name: ashuc2 
+    container_name: anujc2 
     ports:
       - 1234:5999  
   
