--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: '3.8' 
 services: # apps containers you want to build and run
-  anujapp1: # name of appliction for compose 
+  anujapp1: # name da of appliction for compose 
     image: anujdotnetimg:v1  # image i want to build 
     build: .  # path of dockerfile location -- . means current 
     container_name: anujc1 # it will create container also 
